--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -6,6 +6,7 @@
 <link rel="import" href="./ui/spell-bar.html">
 <link rel="import" href="./ui/game-menu.html">
 <link rel="import" href="./ui/game-dialog.html">
+<link rel="import" href="./ui/loot-dialog.html">
 
 <!--
     @author Robin Duda
@@ -59,6 +60,7 @@
             <template is="dom-if" if="[[!loading]]">
                 <player-status></player-status>
                 <game-dialog></game-dialog>
+                <loot-dialog></loot-dialog>
                 <chat-box></chat-box>
                 <spell-bar></spell-bar>
                 <game-menu></game-menu>
