one more fix for the name -> id decoupling work.

--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -312,7 +312,7 @@
                         <iron-icon on-tap="createCharacter" class="create-button"
                                    icon="icons:send"></iron-icon>
 
-                        <character-stats selected="[[_classInfo(classes, selected.name)]]"></character-stats>
+                        <character-stats selected="[[_classInfo(classes, selected.id)]]"></character-stats>
                     </paper-material>
                 </div>
             </div>
