cursor pointer on clickable UI elements in character-list/relam-list.

--- a/prototype/website/src/game-app/character-list.html
+++ b/prototype/website/src/game-app/character-list.html
@@ -33,6 +33,7 @@
             }
 
             .character {
+                cursor: pointer;
                 width: 128px;
                 height: 154px;
                 margin-left: 32px;
