--- a/prototype/website/src/game-app/realm-list.html
+++ b/prototype/website/src/game-app/realm-list.html
@@ -97,6 +97,7 @@
                 position: relative;
                 display: inline-block;
                 width: 100%;
+                cursor: pointer;
             }
 
             .status {
