--- a/prototype/website/src/game-app/ui/loot-dialog.html
+++ b/prototype/website/src/game-app/ui/loot-dialog.html
@@ -64,7 +64,7 @@
                 }
             }
 
-            #loot-container {
+            #container {
                 top: 0;
                 left: 0;
                 right: 0;
@@ -78,7 +78,7 @@
             #overlay {
                 width: 100%;
                 height: 100%;
-                z-index: 500;
+                z-index: 400;
                 background-color: black;
                 opacity: 0.64;
                 animation: fadein 1.2s ease 1;
@@ -114,7 +114,7 @@
 
         </style>
 
-        <div id="loot-container">
+        <div id="container">
             <div id="overlay"></div>
 
             <paper-material elevation="3" class="interface-box" id="dialog">
@@ -152,14 +152,19 @@
             ready() {
                 super.ready();
 
-                server.connection.setHandler('loot_list', e => {
-                    this.set('target', game.entities[e.targetId]);
-                    this.set('loot', e.lootList);
+                server.connection.setHandler('loot_list', {
+                    accepted: (e) => {
+                        this.set('target', game.entities[e.targetId]);
+                        this.set('loot', e.lootList);
 
-                    if (e.lootList.length > 0) {
-                        this._start();
-                    } else {
-                        this._stop();
+                        if (e.lootList.length > 0) {
+                            this._start();
+                        } else {
+                            this._stop();
+                        }
+                    },
+                    error: (event) => {
+                        game.texts.chat(game.player, {text: event.message});
                     }
                 });
 
@@ -171,11 +176,11 @@
             _rarity(level) {
                 switch (level) {
                     case 'COMMON':
-                        return '#02a415';
+                        return '#9f9ea4';
                     case 'UNCOMMON':
-                        return '#00fff2';
+                        return '#13ff00';
                     case 'RARE':
-                        return '#0021ff';
+                        return '#00a9a2';
                     case 'EPIC':
                         return '#ff00b4';
                     case 'LEGENDARY':
@@ -188,12 +193,14 @@
             }
 
             _start() {
-                this.$['loot-container'].style.display = 'block';
+                this.$.container.style.display = 'block';
+                input.block();
             }
 
             _stop() {
-                this.$['loot-container'].style.display = 'none';
+                this.$.container.style.display = 'none';
                 game.inventory.unsubscribeLootList(this.target);
+                input.unblock();
             }
         }
 
