--- a/prototype/website/src/game-app/ui/loot-dialog.html
+++ b/prototype/website/src/game-app/ui/loot-dialog.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 
-<link rel="import" href="../character-stats.html">
+<link rel="import" href="../stats-view.html">
 
 <!--
     @author Robin Duda
@@ -88,10 +88,7 @@
             #loot-items {
                 display: flex;
                 flex-wrap: wrap;
-            }
-
-            .item-info {
-
+                justify-content: center;
             }
 
             .item-stats {
@@ -112,6 +109,37 @@
                 display: block;
             }
 
+            .icon-quantity {
+                display: block;
+                position: absolute;
+                right: 6px;
+                top: 44px;
+            }
+
+            .item-slot {
+                position: absolute;
+                right: 16px;
+                top: 28px;
+                font-size: small;
+            }
+
+            .item-icon {
+                cursor: pointer;
+                position: relative;
+            }
+
+            .icon-quantity {
+                position: absolute;
+                right: 8px;
+                top: 48px;
+                font-size: small;
+                text-shadow: 0px 0px 4px #000;
+            }
+
+            .item-info {
+                min-width: 264px;
+            }
+
         </style>
 
         <div id="container">
@@ -128,14 +156,21 @@
                             <paper-tooltip animation-delay="0" position="bottom" class="stats-tooltip">
                                 <div class="item-info">
                                     <div class="item-name">[[item.name]]</div>
+                                    <!--<div class="item-quantity">[[_quantity(item)]]</div>-->
+                                    <div class="item-slot">[[_slot(item)]]</div>
                                     <span class="stats-header"
-                                          style$="color:[[_rarity(item.rarity)]]">[[item.rarity]]</span>
-                                    <character-stats class="item-stats" compact="true" selected="{{item}}"
-                                                     style="display:block"></character-stats>
+                                          style$="color:[[_rarity(item.rarity)]]">
+                                        <b>[[item.rarity]]</b>
+                                    </span>
+                                    <stats-view class="item-stats" compact="true" selected="{{item}}"
+                                                style="display:block"></stats-view>
                                     <div class="item-description">[[item.description]]</div>
                                 </div>
                             </paper-tooltip>
-                            <img src="[[realm.resources]]/gui/item/icon/[[item.icon]]"/>
+                            <div class="item-icon">
+                                <img src="[[realm.resources]]gui/item/icon/[[item.icon]]"/>
+                                <div class="icon-quantity">[[_quantity(item)]]</div>
+                            </div>
                         </div>
                     </template>
                 </div>
@@ -173,16 +208,36 @@
                 })
             }
 
+            _slot(item) {
+                switch (item.slot) {
+                    case 'weapon':
+                    case 'offhand':
+                        return item.weaponType;
+                    case 'none':
+                        return '';
+                    default:
+                        if (item.armorType !== 'none') {
+                            return item.armorType;
+                        } else {
+                            return item.slot;
+                        }
+                }
+            }
+
+            _quantity(item) {
+                return (item.quantity > 1) ? `${item.quantity}x` : '';
+            }
+
             _rarity(level) {
                 switch (level) {
                     case 'COMMON':
                         return '#9f9ea4';
                     case 'UNCOMMON':
-                        return '#13ff00';
+                        return '#006308';
                     case 'RARE':
-                        return '#00a9a2';
+                        return '#41a6a9';
                     case 'EPIC':
-                        return '#ff00b4';
+                        return '#7f005b';
                     case 'LEGENDARY':
                         return '#b2a600';
                 }
