new spells; shadow step (assasin) and soul contract (necromancer).

--- a/prototype/website/src/game-app/ui/spell-bar.html
+++ b/prototype/website/src/game-app/ui/spell-bar.html
@@ -134,6 +134,10 @@
                 opacity: 0.5;
             }
 
+            .spell-button {
+                position: relative;
+            }
+
         </style>
 
         <paper-material elevation="3" class="spell-bar">
