test some changes to viewport for mobile scaling. - conclusion: window.innerWidth > window.outerWith in some cases.. wow.

--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -3,7 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>chili-game-ext</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>-->
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1,target-densitydpi=device-dpi, user-scalable=no">
     <script src="src/script/network.js"></script>
     <script src="src/script/connection.js"></script>
     <script src="src/script/application.js"></script>
