--- a/prototype/website/src/game-app/character-list.html
+++ b/prototype/website/src/game-app/character-list.html
@@ -30,6 +30,7 @@
             .container {
                 display: block;
                 width: 582px;
+                margin-bottom: 32px;
             }
 
             .character {
@@ -58,6 +59,10 @@
 
             .character-list-box {
                 width: 480px;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
                 margin: auto;
             }
 
